@@ -10,6 +10,7 @@ good_md5 = [
         'b34d82916857eeed34756fa1229ff847',
         'da84666f9b9f33f5bd7fd4b49c6b4ce8',
         'dda00d7c498627e3f0b110bdb458ee57',
+        'e05dbedcdc679fb8ecbe500755b81570',
         'sentinel'
 ]
 
